# QT-Chess

./: .gitignore  CMakeLists.txt  Modele.cpp  Modele.h  README.md  chessboard-QT.cpp  chessboard-QT.h  chessboard-logique.cpp  chessboard-logique.h  main.cpp  mainmenu.cpp  mainmenu.h
Google_tests/: CMakeLists.txt  modele_test.cpp
